Refine Ctrl+Enter block execution and add parser tests